# TI_SEEG_Analysis_Pipeline

./: .gitignore  .pre-commit-config.yaml  HANDOFF.md  HANDOFF_EFIELD.md  HANDOFF_V3.md  HANDOFF_V4.md  LICENSE  README.md  USER_GUIDE.md  plan.md  pyproject.toml
.github/workflows/: ci.yml
configs/: analysis_defaults.yaml  subject_template.yaml
notebooks/: 01_single_subject_walkthrough.ipynb
scripts/: run_anatomy.py  run_connectivity.py  run_full_pipeline.py  run_phase.py  run_preprocessing.py  run_spectral.py  run_stats.py  run_tfr.py
src/ti_seeg/: __init__.py  cli.py  config.py  logging.py  utils.py
src/ti_seeg/anatomy/: __init__.py  contacts.py
src/ti_seeg/connectivity/: __init__.py  connectivity.py
src/ti_seeg/events/: __init__.py  epochs.py
src/ti_seeg/io/: __init__.py  bids_loader.py
src/ti_seeg/phase/: __init__.py  cfc.py  entrainment.py  envelope.py
src/ti_seeg/pipeline/: __init__.py  run.py
src/ti_seeg/preprocessing/: __init__.py  artifacts.py  filters.py  referencing.py
src/ti_seeg/source/: __init__.py  efield.py  localization.py
src/ti_seeg/spectral/: __init__.py  psd.py
src/ti_seeg/stats/: __init__.py  contrasts.py
src/ti_seeg/tfr/: __init__.py  tfr.py
src/ti_seeg/visualization/: __init__.py  efield_plots.py  plots.py  report.py
tests/: conftest.py  test_anatomy.py  test_cfc.py  test_cli.py  test_config.py  test_efield.py  test_entrainment.py  test_envelope.py  test_epochs.py  test_filters.py  test_logging.py  test_referencing.py  test_spectral.py
